Fixed post incl 2021

--- a/_posts/2009-11-05-teched-berlin-2009.md
+++ b/_posts/2009-11-05-teched-berlin-2009.md
@@ -19,7 +19,7 @@ tags:
 
 I haven’t taken the time to browse through the session catalogs yet, but I will be seeking information about:
 
-  * Microsoft&#8217;s acquisition of FAST Search and how Microsoft incorporates into their products
+  * Microsoft's acquisition of FAST Search and how Microsoft incorporates into their products
   * Microsoft SQL Server 2008 R2 and especially the spatial support for Reporting Services
   * The new features of Windows Communication Foundation 4.0, the redesigned Windows Workflow Foundation 4.0 and .Net 4.0 in general.
   * The Windows Azure Platform
