--- a/_posts/2010-12-08-851.md
+++ b/_posts/2010-12-08-851.md
@@ -31,7 +31,7 @@ Vinderen af [gårsdagens Microsoft Julekalender låge #7 fundet](/blog/2010/12/0
         Console.WriteLine("Ready? Press [ENTER]...");
         Console.ReadLine();
 
-        var factory = new ChannelFactory&lt;Shared.IMyService&gt;(
+        var factory = new ChannelFactory<Shared.IMyService>(
             new WSHttpBinding(),
             new EndpointAddress("http://localhost:8080/MyService"));
 
@@ -51,7 +51,7 @@ Vinderen af [gårsdagens Microsoft Julekalender låge #7 fundet](/blog/2010/12/0
         Console.ReadLine();
     }
 
-    static string Do(ChannelFactory&lt;Shared.IMyService&gt; factory,
+    static string Do(ChannelFactory<Shared.IMyService> factory,
          string name)
     {
         var proxy = factory.CreateChannel();
