Fixed all posts

--- a/_posts/2006-12-30-i-am-a-dad.md
+++ b/_posts/2006-12-30-i-am-a-dad.md
@@ -5,18 +5,8 @@ categories:
   - Announcement
   - Victoria
 ---
-<p class="MsoNormal">
-  <span lang="EN-GB"><a href="http://www.lybecker.com/blog/wp-content/uploads/babyvictoria.jpg"></a></span>
-</p>
+![Victoria 0 days old](/wp-content/uploads/babyvictoria.jpg)
 
-<p class="MsoNormal" style="text-align: center;">
-  <span lang="EN-GB"><a href="http://www.lybecker.com/blog/wp-content/uploads/babyvictoria.jpg"><img loading="lazy" class="size-full wp-image-98 aligncenter" title="Baby Victoria" src="http://www.lybecker.com/blog/wp-content/uploads/babyvictoria.jpg" alt="" width="400" height="533" /></a></span>
-</p>
+At 01:10 (1:10 AM) Saturday the December 30th 2006 I became a father. It is a big thing for me, but still strange. Normally when I see a newly born baby and the parents claim it is the most beautiful baby in the world, I yarn. Most babies are ugly.
 
-<p class="MsoNormal">
-  <span lang="EN-GB">At 01:10 (1:10 AM) Saturday the December 30<sup>th</sup> 2006<br /> I became a father. It is a big thing for me, but still strange. Normally when I see<br /> a newly born baby and the parents claim it is the most beautiful baby in the world,<br /> I yarn. Most babies are ugly.<br /> </span>
-</p>
-
-<p class="MsoNormal">
-  <span lang="EN-GB">My baby girl is not the most beautiful baby, but a close<br /> runner up 😉</span>
-</p>
+My baby girl is not the most beautiful baby, but a close runner up 😉
